--- a/master_files/master_config.cfg
+++ b/master_files/master_config.cfg
@@ -3,7 +3,7 @@
 
 ########################### RE config ##########################################
 # The path for the directory to be monitored by the plug-and_play
-dir_path = "/home/eyal/codes/cloudio/master_files/plugins";
+dir_path = "./plugins";
 
 # the number of threads that will be used in the thread-pool
 threads_in_tp = 10;
