--- a/master_files/master_config.cfg
+++ b/master_files/master_config.cfg
@@ -26,3 +26,13 @@ ports_arr =
 };
 
 
+
+
+
+
+
+
+# NOTE about libconfig: the path "/usr/local/lib" was added to a file named 
+# "/etc/ld.so.conf", then a command "sudo ldconfig" was entered.
+# This allowed my program to find and link the libconfig files.
+
