--- a/slave_files/slave_config.cfg
+++ b/slave_files/slave_config.cfg
@@ -16,3 +16,12 @@ slave_size = 4194304; #which is equal to: 1024 * 1024 * 4
 message_size = 4136;
 
 
+
+
+
+
+
+
+# NOTE about libconfig: the path "/usr/local/lib" was added to a file named 
+# "/etc/ld.so.conf", then a command "sudo ldconfig" was entered.
+# This allowed my program to find and link the libconfig files.
